identity-aware-proxy/kubernetes/pomerium/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pomerium
  labels:
    app.kubernetes.io/name: pomerium
    app.kubernetes.io/component: identity-aware-proxy
